Added FreeNotification. Clean up in TODO.

--- a/xcl/TODO
+++ b/xcl/TODO
@@ -1,60 +1,2 @@
-
-Estudar isso:
-
-http://64.233.179.104/search?q=cache:LcDT1HpnhA0J:navi.cx/svn/misc/trunk/xchat-gnome/fe-gnome/main_window.c+gtk_accel_group_connect&hl=en&ct=clnk&cd=10&client=firefox
-
-static void on_pgup (GtkAccelGroup *accelgroup, GObject *arg1, guint arg2, GdkModifierType arg3, gpointer data);
-static void on_pgdn (GtkAccelGroup *accelgroup, GObject *arg1, guint arg2, GdkModifierType arg3, gpointer data);
-
-...
-
-{
-    GtkAccelGroup *pg_accel;
-    GClosure *closure;
- 
-    /* Create our accelerator group */
-    pg_accel = gtk_accel_group_new ();
- 
-    /* Add the two accelerators */
-    closure = g_cclosure_new (G_CALLBACK (on_pgup), NULL, NULL);
-    gtk_accel_group_connect (pg_accel, GDK_Page_Up, 0, GTK_ACCEL_VISIBLE, closure);
-    g_closure_unref (closure);
- 
-    closure = g_cclosure_new (G_CALLBACK (on_pgdn), NULL, NULL);
-    gtk_accel_group_connect (pg_accel, GDK_Page_Down, 0, GTK_ACCEL_VISIBLE, closure);
-    g_closure_unref (closure);
- 
-    /* Add the accelgroup to the main window. */
-    gtk_window_add_accel_group (GTK_WINDOW (gui.main_window), pg_accel);
-}
-
-...
-
-/* Create our accelerator group. */
-discussion_accel = gtk_accel_group_new ();
-
-/* For alt-1 through alt-9 we just loop to set up the accelerators.
-* We want the data passed with the callback to be one less then the
-* button pressed (e.g. alt-1 requests the channel who's path is 0:0)
-* so we loop from 0 <= i < 1. We use i for the user data and the ascii
-* value of i+1 to get the keyval.
-*/
-for (i = 0; i < 9; i++)
-{
-    /* num is a string containing the ascii value of i+1. */
-    num[0] = i + '1';
-
-    /* Set up our GClosure with user data set to i. */
-    closure = g_cclosure_new (G_CALLBACK (on_discussion_jump_activate), GINT_TO_POINTER (i), NULL);
-
-    /* Connect up the accelerator. */
-    gtk_accel_group_connect (discussion_accel, gdk_keyval_from_name (num), GDK_MOD1_MASK, GTK_ACCEL_VISIBLE, closure);
-
-    /* Delete the reference to the GClosure. */
-    g_closure_unref (closure);
-}
-
-/* Now we set up keypress alt-0 with user data 9. */
-closure = g_cclosure_new (G_CALLBACK (on_discussion_jump_activate), GUINT_TO_POINTER (9), NULL);
-gtk_accel_group_connect (discussion_accel, gdk_keyval_from_name ("0"), GDK_MOD1_MASK, GTK_ACCEL_VISIBLE, closure);
-g_closure_unref (closure);
+TODO List
+--------------------------------------
